--- a/metadata.yaml
+++ b/metadata.yaml
@@ -40,5 +40,6 @@ subjects:
 - !lcsh 'Chastity -- Drama'
 - !lcsh 'Vienna (Austria) -- Drama'
 - !lcsh 'Brothers and sisters -- Drama'
+- GITenberg
 title: Verta verrasta
 url: http://www.gutenberg.org/ebooks/44825
